New footer_clix.html, footer added to only landing page, banner wid chnaged to original from mid, new landing image, new module card added, The unit name and enroll button on overview's css modified

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -2821,7 +2821,7 @@ ul.jqtree-tree .jqtree-toggler:hover {
 
 /* line 3011, ../../../scss/_clix2017.scss */
 .bg-img {
-  background: url(/static/ndf/images/landing.jpg);
+  background: url(/static/ndf/images/i2c-bg.png);
   height: 100vh;
   background-size: 100%;
 }
@@ -3963,8 +3963,8 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   overflow: hidden;
   background-size: 100% 100%;
   border-radius: 8px 0px 0px 8px;
-  box-shadow: inset 0 0 5px 2px;
-  background-image: url("/static/ndf/images/module_banner.png");
+  box-shadow: inset 0 0 5px 0px;
+  background-image: url("/static/ndf/images/module-card.png");
   position: relative;
   z-index: 3;
   -webkit-transition: border-radius .2s;
@@ -4105,8 +4105,11 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   display: block;
   margin-top: 90px;
   margin-left: 40px;
+  border-radius: 8px 0px 0px 8px;
+  transition: border-radius .2s;
+  text-shadow: 3px 2px #164a7b;
 }
-/* line 4315, ../../../scss/_clix2017.scss */
+/* line 4318, ../../../scss/_clix2017.scss */
 .lms_page .lms_banner .lms_heading .enroll-unit {
   margin-top: 100px;
   margin-right: -45px;
@@ -4115,18 +4118,22 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   text-align: center;
   cursor: pointer;
   font-family: OpenSans-Semibold;
-}
-/* line 4327, ../../../scss/_clix2017.scss */
-.lms_page .lms_banner .lms_heading .enroll-unit > a {
   color: #ffc14e;
+  box-shadow: 0.6px 0.9px #164a7b;
+  text-shadow: 1px 1px #164a7b;
+  opacity: 1;
+  margin-right: 6px;
 }
-/* line 4330, ../../../scss/_clix2017.scss */
-.lms_page .lms_banner .lms_heading .enroll-unit:hover {
-  background-color: rgba(255, 193, 78, 0.3);
-  cursor: pointer;
+/* line 4333, ../../../scss/_clix2017.scss */
+.lms_page .lms_banner .lms_heading .enroll-unit > a {
   color: white;
 }
-/* line 4337, ../../../scss/_clix2017.scss */
+/* line 4336, ../../../scss/_clix2017.scss */
+.lms_page .lms_banner .lms_heading .enroll-unit:hover {
+  cursor: pointer;
+  color: #ffc14e;
+}
+/* line 4343, ../../../scss/_clix2017.scss */
 .lms_page .lms_banner .lms_heading .enroll_unit {
   margin-top: 100px;
   margin-right: 50px;
@@ -4139,17 +4146,16 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   color: #000;
   font-family: OpenSans-Semibold;
 }
-/* line 4349, ../../../scss/_clix2017.scss */
+/* line 4355, ../../../scss/_clix2017.scss */
 .lms_page .lms_banner .lms_heading .enroll_unit > a {
-  color: #ffc14e;
-}
-/* line 4352, ../../../scss/_clix2017.scss */
-.lms_page .lms_banner .lms_heading .enroll_unit:hover {
-  background-color: rgba(255, 193, 78, 0.3);
-  cursor: pointer;
   color: white;
 }
-/* line 4359, ../../../scss/_clix2017.scss */
+/* line 4358, ../../../scss/_clix2017.scss */
+.lms_page .lms_banner .lms_heading .enroll_unit:hover {
+  cursor: pointer;
+  color: #ffc14e;
+}
+/* line 4366, ../../../scss/_clix2017.scss */
 .lms_page .lms_banner .lms_heading .course_actions > span {
   background: #2e3f51;
   border: 1px solid rgba(255, 255, 255, 0.7);
@@ -4163,7 +4169,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   margin-top: 90px;
   margin-right: 65px;
 }
-/* line 4375, ../../../scss/_clix2017.scss */
+/* line 4382, ../../../scss/_clix2017.scss */
 .lms_page .lms_banner .lms_heading .course_actions > i {
   margin-right: 5px;
   background: rgba(0, 0, 0, 0.6);
@@ -4176,7 +4182,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   border-radius: 3px;
 }
 
-/* line 4392, ../../../scss/_clix2017.scss */
+/* line 4399, ../../../scss/_clix2017.scss */
 .enroll-btn {
   width: 90px;
   opacity: 1;
@@ -4191,7 +4197,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   border: 2px solid #ffc14e;
 }
 
-/* line 4410, ../../../scss/_clix2017.scss */
+/* line 4417, ../../../scss/_clix2017.scss */
 .lms_secondary_header {
   width: 100%;
   position: relative;
@@ -4200,16 +4206,16 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
-/* line 4420, ../../../scss/_clix2017.scss */
+/* line 4427, ../../../scss/_clix2017.scss */
 ul.nav_menu_1 {
   margin-bottom: 0px;
   background-color: #fff;
 }
-/* line 4423, ../../../scss/_clix2017.scss */
+/* line 4430, ../../../scss/_clix2017.scss */
 ul.nav_menu_1 > li {
   display: inline-block;
 }
-/* line 4426, ../../../scss/_clix2017.scss */
+/* line 4433, ../../../scss/_clix2017.scss */
 ul.nav_menu_1 > li > a {
   list-style-type: none;
   display: inline-block;
@@ -4220,60 +4226,60 @@ ul.nav_menu_1 > li > a {
   letter-spacing: 0.8px;
   border-bottom: 3px solid transparent;
 }
-/* line 4437, ../../../scss/_clix2017.scss */
+/* line 4444, ../../../scss/_clix2017.scss */
 ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   border-bottom: 3px solid #ffc14e;
 }
 
-/* line 4445, ../../../scss/_clix2017.scss */
+/* line 4452, ../../../scss/_clix2017.scss */
 .course-content {
   background: #fff;
   margin: 20px auto;
   padding: 20px 0px;
 }
-/* line 4452, ../../../scss/_clix2017.scss */
+/* line 4459, ../../../scss/_clix2017.scss */
 .course-content ul.jqtree-tree .course-tree-node.jqtree-selected .jqtree-element {
   background: #fff;
 }
-/* line 4455, ../../../scss/_clix2017.scss */
+/* line 4462, ../../../scss/_clix2017.scss */
 .course-content ul.jqtree-tree .course-tree-node > div {
   height: 35px;
 }
-/* line 4457, ../../../scss/_clix2017.scss */
+/* line 4464, ../../../scss/_clix2017.scss */
 .course-content ul.jqtree-tree .course-tree-node > div a {
   margin-right: 0.7em;
 }
-/* line 4464, ../../../scss/_clix2017.scss */
+/* line 4471, ../../../scss/_clix2017.scss */
 .course-content .course-unit-name {
   padding-left: 20px;
 }
-/* line 4466, ../../../scss/_clix2017.scss */
+/* line 4473, ../../../scss/_clix2017.scss */
 .course-content .course-unit-name:not(:last-child) {
   border-bottom: 1px solid #d2cfcf;
 }
-/* line 4471, ../../../scss/_clix2017.scss */
+/* line 4478, ../../../scss/_clix2017.scss */
 .course-content .course-unit-name > div .jqtree-title {
   color: #3c5264;
   font-size: 19px;
   font-weight: 600;
 }
-/* line 4479, ../../../scss/_clix2017.scss */
+/* line 4486, ../../../scss/_clix2017.scss */
 .course-content .course-activity-group > div .jqtree-title {
   color: #74a0c0;
   font-size: 17px;
 }
-/* line 4485, ../../../scss/_clix2017.scss */
+/* line 4492, ../../../scss/_clix2017.scss */
 .course-content .course-activity-name > div .jqtree-title {
   color: #74a0c0;
   font-size: 17px;
 }
 
-/* line 4492, ../../../scss/_clix2017.scss */
+/* line 4499, ../../../scss/_clix2017.scss */
 .listing-row {
   margin-top: 10px !important;
 }
 
-/* line 4496, ../../../scss/_clix2017.scss */
+/* line 4503, ../../../scss/_clix2017.scss */
 .raw_material_asset {
   width: auto;
   top: -0.50em;
@@ -4290,7 +4296,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   letter-spacing: 0.3px;
 }
 
-/* line 4512, ../../../scss/_clix2017.scss */
+/* line 4519, ../../../scss/_clix2017.scss */
 .status-completed {
   width: auto;
   top: -1.15em;
@@ -4307,7 +4313,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   letter-spacing: 0.4px;
 }
 
-/* line 4528, ../../../scss/_clix2017.scss */
+/* line 4535, ../../../scss/_clix2017.scss */
 .status-in-progress {
   width: auto;
   top: -1.15em;
@@ -4324,7 +4330,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   letter-spacing: 0.4px;
 }
 
-/* line 4545, ../../../scss/_clix2017.scss */
+/* line 4552, ../../../scss/_clix2017.scss */
 .status-upcoming {
   width: auto;
   top: -1.15em;
@@ -4341,7 +4347,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   letter-spacing: 0.4px;
 }
 
-/* line 4562, ../../../scss/_clix2017.scss */
+/* line 4569, ../../../scss/_clix2017.scss */
 .status-draft {
   width: auto;
   top: -1.15em;
@@ -4358,31 +4364,31 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   letter-spacing: 0.4px;
 }
 
-/* line 4580, ../../../scss/_clix2017.scss */
+/* line 4587, ../../../scss/_clix2017.scss */
 .lesson-dropdown ul {
   display: none;
 }
 
-/* line 4584, ../../../scss/_clix2017.scss */
+/* line 4591, ../../../scss/_clix2017.scss */
 .lesson-dropdown:hover ul {
   display: block;
 }
 
-/* line 4588, ../../../scss/_clix2017.scss */
+/* line 4595, ../../../scss/_clix2017.scss */
 .lesson_name_in_export {
   list-style: none;
 }
-/* line 4590, ../../../scss/_clix2017.scss */
+/* line 4597, ../../../scss/_clix2017.scss */
 .lesson_name_in_export:hover {
   border-left: 2.5px solid #ce7869;
 }
 
-/* line 4595, ../../../scss/_clix2017.scss */
+/* line 4602, ../../../scss/_clix2017.scss */
 .buddy_margin {
   margin-right: 70px;
 }
 
-/* line 4600, ../../../scss/_clix2017.scss */
+/* line 4607, ../../../scss/_clix2017.scss */
 .lms_explore_head {
   width: 100%;
   height: 40px;
@@ -4390,49 +4396,49 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   color: #164A7B;
   margin-top: -30px;
 }
-/* line 4606, ../../../scss/_clix2017.scss */
+/* line 4613, ../../../scss/_clix2017.scss */
 .lms_explore_head > p {
   margin-left: 81px;
   padding: 12px 0px 0px 1px;
   font-family: OpenSans-Semibold;
   font-size: 20px;
 }
-/* line 4612, ../../../scss/_clix2017.scss */
+/* line 4619, ../../../scss/_clix2017.scss */
 .lms_explore_head > a {
   padding: 12px 85px 3px 0px;
 }
 
-/* line 4616, ../../../scss/_clix2017.scss */
+/* line 4623, ../../../scss/_clix2017.scss */
 .lms_explore_head_unit {
   width: 100%;
   height: 40px;
   background-color: #fff;
   color: #164A7B;
 }
-/* line 4621, ../../../scss/_clix2017.scss */
+/* line 4628, ../../../scss/_clix2017.scss */
 .lms_explore_head_unit > p {
   margin-left: 81px;
   padding: 0px 0px 0px 1px;
   font-family: OpenSans-Semibold;
   font-size: 20px;
 }
-/* line 4627, ../../../scss/_clix2017.scss */
+/* line 4634, ../../../scss/_clix2017.scss */
 .lms_explore_head_unit > a {
   padding: 0px 85px 3px 0px;
 }
 
-/* line 4632, ../../../scss/_clix2017.scss */
+/* line 4639, ../../../scss/_clix2017.scss */
 .lms_explore_back {
   background-color: #fff;
 }
 
-/* line 4636, ../../../scss/_clix2017.scss */
+/* line 4643, ../../../scss/_clix2017.scss */
 .lms_explore_back_unit {
   background-color: #fff;
   margin-top: -23.3px;
 }
 
-/* line 4644, ../../../scss/_clix2017.scss */
+/* line 4651, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner {
   width: 100%;
   height: 200px;
@@ -4440,7 +4446,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   background-size: 100% 100%;
   position: relative;
 }
-/* line 4651, ../../../scss/_clix2017.scss */
+/* line 4658, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner:before {
   content: ' ';
   background-color: rgba(0, 0, 0, 0.1);
@@ -4454,13 +4460,13 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   z-index: 10;
   box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.2);
 }
-/* line 4665, ../../../scss/_clix2017.scss */
+/* line 4672, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner .banner_profile {
   position: absolute;
   bottom: 30px;
   left: 40px;
 }
-/* line 4670, ../../../scss/_clix2017.scss */
+/* line 4677, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner .banner_profile .buddy_logo {
   display: inline-block;
   margin-right: 10px;
@@ -4469,53 +4475,53 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   overflow: hidden;
   background-color: #fff;
 }
-/* line 4678, ../../../scss/_clix2017.scss */
+/* line 4685, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner .banner_profile .buddy_logo svg {
   height: 100px;
   width: 100px;
 }
-/* line 4683, ../../../scss/_clix2017.scss */
+/* line 4690, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner .banner_profile .buddy_logo svg path {
   fill: #7a422a;
 }
-/* line 4688, ../../../scss/_clix2017.scss */
+/* line 4695, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner .banner_profile .banner_heading {
   color: #fff;
   display: inline-block;
   vertical-align: top;
 }
-/* line 4693, ../../../scss/_clix2017.scss */
+/* line 4700, ../../../scss/_clix2017.scss */
 .mydesk_page .page_banner .banner_profile .banner_heading .buddy_name {
   font-size: 23px;
   display: block;
   margin-bottom: 10px;
 }
-/* line 4701, ../../../scss/_clix2017.scss */
+/* line 4708, ../../../scss/_clix2017.scss */
 .mydesk_page .page_menu {
   border-bottom: 1px solid #e5e5e5;
 }
-/* line 4705, ../../../scss/_clix2017.scss */
+/* line 4712, ../../../scss/_clix2017.scss */
 .mydesk_page .page_menu li > a {
   padding: 12px 20px 9px;
 }
 
-/* line 4715, ../../../scss/_clix2017.scss */
+/* line 4722, ../../../scss/_clix2017.scss */
 .input_links {
   margin-right: 50px;
 }
-/* line 4717, ../../../scss/_clix2017.scss */
+/* line 4724, ../../../scss/_clix2017.scss */
 .input_links a {
   margin-right: 35px;
   margin-top: 5px;
 }
 
-/* line 4723, ../../../scss/_clix2017.scss */
+/* line 4730, ../../../scss/_clix2017.scss */
 #course-notification
 #status {
   width: 100% !important;
 }
 
-/* line 4729, ../../../scss/_clix2017.scss */
+/* line 4736, ../../../scss/_clix2017.scss */
 .add-note-btn {
   padding: 3px 11px;
   border-radius: 100%;
@@ -4527,7 +4533,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   color: #6153AE;
 }
 
-/* line 4740, ../../../scss/_clix2017.scss */
+/* line 4747, ../../../scss/_clix2017.scss */
 .bef-note-btn {
   padding: 3px 11px;
   border-radius: 100%;
@@ -4539,7 +4545,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   color: #6153AE;
 }
 
-/* line 4751, ../../../scss/_clix2017.scss */
+/* line 4758, ../../../scss/_clix2017.scss */
 .edit-note-btn {
   float: right;
   border: 1px solid #CFCFCF;
@@ -4548,13 +4554,139 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   color: #A2A2A2;
   background-color: #f7f7f7;
 }
-/* line 4758, ../../../scss/_clix2017.scss */
+/* line 4765, ../../../scss/_clix2017.scss */
 .edit-note-btn i {
   margin-right: 5px;
 }
 
-/* line 4763, ../../../scss/_clix2017.scss */
+/* line 4770, ../../../scss/_clix2017.scss */
 .img-height {
   height: 150px;
   width: 1351px;
+}
+
+/* line 4775, ../../../scss/_clix2017.scss */
+.footer_clix {
+  clear: both;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  z-index: 10;
+  margin-top: -100em;
+  background-color: rgba(107, 0, 83, 0.09);
+  color: #fff;
+  margin-bottom: -307px;
+}
+/* line 4791, ../../../scss/_clix2017.scss */
+.footer_clix .footer-top {
+  margin-bottom: -16px;
+}
+/* line 4793, ../../../scss/_clix2017.scss */
+.footer_clix .footer-top .footer-heading-left {
+  font-size: 17px;
+  padding-top: 7px;
+  color: rgba(22, 74, 123, 0.63);
+  font-family: 'OpenSans-Semibold';
+  margin-left: 45px;
+  letter-spacing: 3.5px;
+}
+/* line 4801, ../../../scss/_clix2017.scss */
+.footer_clix .footer-top .footer-heading-right {
+  font-size: 19px;
+  padding-top: 5px;
+  color: rgba(107, 0, 83, 0.66);
+  font-family: 'OpenSans-Semibold';
+  margin-right: 180px;
+  padding-bottom: 5px;
+  letter-spacing: 0.5px;
+}
+/* line 4813, ../../../scss/_clix2017.scss */
+.footer_clix .footer-small-text {
+  margin-left: 16px;
+  margin-top: -17px;
+  margin-bottom: 2px;
+}
+/* line 4817, ../../../scss/_clix2017.scss */
+.footer_clix .footer-small-text > a {
+  color: gray;
+}
+/* line 4823, ../../../scss/_clix2017.scss */
+.footer_clix .footer-logo {
+  height: 65px;
+  width: 76px;
+}
+/* line 4828, ../../../scss/_clix2017.scss */
+.footer_clix .image-left-section {
+  padding: 1rem;
+  width: 55rem;
+  max-width: 55rem;
+  margin: 0 auto;
+}
+/* line 4835, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont {
+  display: inline-block;
+  vertical-align: top;
+  margin: 20px;
+  text-align: left;
+  margin-top: -15px;
+  margin-left: 34px;
+}
+/* line 4843, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont .links_collapse {
+  max-height: 78px;
+  overflow: hidden;
+  transition: all 0.5s ease-out;
+}
+/* line 4848, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont .links_collapse ul {
+  display: inline;
+  padding: 0;
+  margin: 0px !important;
+}
+/* line 4853, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont .links_collapse ul > li, .footer_clix .footer_link_cont .links_collapse ul a {
+  color: #ce7869;
+  font-family: OpenSans-Regular;
+  font-size: 14px;
+}
+/* line 4861, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont .links_show {
+  max-height: 600px;
+}
+/* line 4866, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont .show_foot_links {
+  color: #777777;
+  cursor: pointer;
+}
+/* line 4870, ../../../scss/_clix2017.scss */
+.footer_clix .footer_link_cont .show_foot_links:hover {
+  text-decoration: underline;
+}
+/* line 4877, ../../../scss/_clix2017.scss */
+.footer_clix .footer-bottom {
+  text-align: center;
+  margin-top: -15px;
+}
+/* line 4881, ../../../scss/_clix2017.scss */
+.footer_clix .footer-bottom > h6 {
+  color: #74b3dc !important;
+  font-weight: 500;
+}
+/* line 4885, ../../../scss/_clix2017.scss */
+.footer_clix .footer-bottom > h6 > a {
+  color: #164A7B;
+  font-family: OpenSans-Semibold;
+  font-size: 14px;
+}
+/* line 4891, ../../../scss/_clix2017.scss */
+.footer_clix .footer-bottom > h7 {
+  color: #74b3dc;
+}
+/* line 4895, ../../../scss/_clix2017.scss */
+.footer_clix .footer-bottom .footer-tiny {
+  color: #aaa;
+  margin-top: -33px;
+  font-size: 10px;
 }
