--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3010,7 +3010,7 @@ ul.jqtree-tree .jqtree-toggler {
  }
 .bg-img{
     //background: url(/static/ndf/images/group-tile.png) no-repeat;
-    background: url(/static/ndf/images/landing.jpg);
+    background: url(/static/ndf/images/i2c-bg.png);
     height:100vh;
     background-size: 100%;
 }
@@ -4167,8 +4167,8 @@ $module-card-lines-to-show: 3;
         overflow: hidden;
         background-size: 100% 100%;
         border-radius: 8px 0px 0px 8px;
-        box-shadow: inset 0 0 5px 2px;
-        background-image: url('/static/ndf/images/module_banner.png');
+        box-shadow: inset 0 0 5px 0px;
+        background-image: url('/static/ndf/images/module-card.png');
         position: relative;
         z-index: 3;
         -webkit-transition: border-radius .2s;
@@ -4311,26 +4311,32 @@ $module-card-lines-to-show: 3;
                 display: block;
                 margin-top: 90px;
                 margin-left: 40px;
+                border-radius: 8px 0px 0px 8px;
+                transition: border-radius .2s;
+                text-shadow: 3px 2px #164a7b;
             }
             .enroll-unit{
                 margin-top: 100px;
                 margin-right: -45px;
-                //border: 2px solid #ffc14e;
-                //border-radius: 6px;
                 padding: 1px 5px 1px 5px;
                 text-transform: none;
                 text-align: center;
                 cursor: pointer;
-                //color: #000;
                 font-family: OpenSans-Semibold;
+                color: #ffc14e;
+               // margin-right: 103px;
+                box-shadow: 0.6px 0.9px #164a7b;
+                text-shadow: 1px 1px #164a7b;
+                opacity: 1;
+                margin-right:6px;
 
                 &>a{
-                    color:#ffc14e;
+                    color:white;
                 }
                 &:hover{
-                background-color:rgba(255,193,78,0.3);
+                //background-color:rgba(255,193,78,0.3);
                 cursor:pointer;
-                color:white;
+                color:#ffc14e;
                 }
             }
 
@@ -4347,12 +4353,13 @@ $module-card-lines-to-show: 3;
                 font-family: OpenSans-Semibold;
 
                 &>a{
-                    color:#ffc14e;
+                    color:white;
                 }
                 &:hover{
-                background-color:rgba(255,193,78,0.3);
+                //background-color:rgba(255,193,78,0.3);
                 cursor:pointer;
-                color:white;
+                color:#ffc14e;
+                //margin-right:6px;
                 }
             }
 
@@ -4764,3 +4771,137 @@ ul.nav_menu_1 {
     height:150px;
     width:1351px;
 }
+
+.footer_clix{
+    clear: both;
+    position: absolute;
+    right:0;
+    bottom:0;
+    left:0;
+    padding:1rem;
+    z-index: 10;
+    //height: 5em;
+    margin-top: -100em;
+    //background-color: #D4D5D6;
+    background-color: rgba(107, 0, 83, 0.09);
+    color: #fff;
+    margin-bottom:-307px;
+    //height:10px;
+
+    .footer-top{
+        margin-bottom:-16px;
+        .footer-heading-left{
+                font-size: 17px;
+                padding-top: 7px;
+                color: rgba(22, 74, 123, 0.63);
+                font-family: 'OpenSans-Semibold';
+                margin-left: 45px;
+                letter-spacing: 3.5px;
+        }
+        .footer-heading-right{
+                font-size: 19px;
+                padding-top: 5px;
+                color: rgba(107, 0, 83, 0.66);
+                font-family: 'OpenSans-Semibold';
+                margin-right: 180px;
+                padding-bottom: 5px;
+                letter-spacing: 0.5px;
+        }
+        
+    }
+
+    .footer-small-text{
+                margin-left: 16px;
+                margin-top: -17px;
+                margin-bottom:2px;
+                >a{
+                    color:gray;
+                }
+        }
+        
+
+    .footer-logo{
+                height: 65px;
+                width: 76px;
+        }
+
+    .image-left-section{
+        padding: 1rem;
+        width:55rem;
+        max-width:55rem;
+        margin: 0 auto;
+    }
+
+    .footer_link_cont {
+        display: inline-block;
+        vertical-align: top;
+        margin: 20px;
+        text-align: left;
+        margin-top: -15px;
+        margin-left: 34px;
+
+      .links_collapse {
+      max-height: 78px;
+      overflow: hidden;
+      transition: all 0.5s ease-out;
+
+      ul {
+        display: inline;
+        padding: 0;
+        margin: 0px !important;
+
+        >li,a{
+            color:$primary-orange;
+            font-family: OpenSans-Regular;
+            font-size:14px;
+        }
+      }
+    }
+
+      .links_show {
+        //change as per requirement on addition on more links in future
+        max-height: 600px;
+      }
+      
+      .show_foot_links {
+        color: #777777;
+        cursor: pointer;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
+
+    .footer-bottom{
+        text-align:center;
+        margin-top:-15px;
+
+       >h6{ 
+            color:$secondry-blue !important;
+            font-weight: 500;
+
+        >a{
+            color: $primary-blue;
+            font-family: OpenSans-Semibold;
+            font-size: 14px;
+        }
+    }
+        >h7{
+            color:$secondry-blue;
+        }
+
+        .footer-tiny{
+            color:#aaa;
+            margin-top:-33px;
+            font-size:10px;
+        }
+
+    }  
+      
+      
+      
+
+}
+
