--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4745,3 +4745,14 @@ ul.nav_menu_1 {
         margin-right: 5px;
     }
 }
+
+.jqtree-title > .fa-check{
+    color: green;
+}
+.jqtree-title > .fa-clock-o{
+    color: orange;
+}
+.course-status-icon{
+    font-size: 20px;
+    margin-right: 5px;
+}
