--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -54,6 +54,39 @@
       <div class="course-points-breakup">
 
       </div>
+
+    </div>
+</div>
+<div class="row">
+    <div class="columns small-12 medium-6">
+      <div class="course-quiz-perf course-section">
+        <span class="course-section-heading">Assessment Performance</span>
+        <span class="course-section-icon">
+          <i class="fa fa-question-circle"></i>
+        </span>
+        <div class="row">
+          <div class="columns small-12 medium-6">
+            <span class="course-metric-heading">Questions Attempted</span>
+            <span class="course-metric-count attempted_quizitems">{{attempted_quizitems}}</span>
+          </div>
+          <div class="columns small-12 medium-6">
+            <span class="course-metric-heading">Total Questions</span>
+            <span class="course-metric-count total_quizitems">{{total_quizitems}}</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="columns small-12 medium-6">
+            <span class="course-metric-heading">Correct Answers</span>
+            <span class="course-metric-count correct-count correct_attempted_quizitems">{{correct_attempted_quizitems}}</span>
+          </div>
+          <div class="columns small-12 medium-6">
+            <span class="course-metric-heading">Incorrect answers</span>
+            <span class="course-metric-count incorrect-count incorrect_attempted_quizitems">{{incorrect_attempted_quizitems}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="columns small-12 medium-6">
       <div class="course-interactions course-section">
         <span class="course-section-heading">Interactions</span>
         <span class="course-section-icon">
@@ -95,6 +128,11 @@
           {% endcomment %}
         </div>
       </div>
+    </div>
+</div>
+<div class="row">
+    <div class="columns small-12 medium-6">
+
       <div class="course-gallery-uploads course-section">
         <span class="course-section-heading">Gallery uploads</span>
         <span class="course-section-icon">
@@ -140,34 +178,10 @@
           </div>
         </div>
       </div>
-      <div class="course-quiz-perf course-section">
-        <span class="course-section-heading">Quiz Performance</span>
-        <span class="course-section-icon">
-          <i class="fa fa-question-circle"></i>
-        </span>
-        <div class="row">
-          <div class="columns small-12 medium-6">
-            <span class="course-metric-heading">Questions Attempted</span>
-            <span class="course-metric-count attempted_quizitems">{{attempted_quizitems}}</span>
-          </div>
-          <div class="columns small-12 medium-6">
-            <span class="course-metric-heading">Total Questions</span>
-            <span class="course-metric-count total_quizitems">{{total_quizitems}}</span>
-          </div>
-        </div>
-        <div class="row">
-          <div class="columns small-12 medium-6">
-            <span class="course-metric-heading">Correct Answers</span>
-            <span class="course-metric-count correct-count correct_attempted_quizitems">{{correct_attempted_quizitems}}</span>
-          </div>
-          <div class="columns small-12 medium-6">
-            <span class="course-metric-heading">Incorrect answers</span>
-            <span class="course-metric-count incorrect-count incorrect_attempted_quizitems">{{incorrect_attempted_quizitems}}</span>
-          </div>
-        </div>
-      </div>
+    </div>
+    <div class="columns small-12 medium-6">
 
-      <div class="course-gallery-uploads course-section">
+      <div class="course-notes course-section">
         <span class="course-section-heading">Note Making</span>
         <span class="course-section-icon">
           <i class="fa fa-file-text"></i>
@@ -208,6 +222,9 @@
           </div>
         </div>
       </div>
+    </div>  
+</div>
+
       {% comment %}
       <div class="course-warning course-section">
           <h5>WAITING FOR YOUR FEEDBACK</h5>
